--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <!-- SIDEBAR -->
+    <div class="sidebar">
+      <button class="nav-btn"></button>
+    </div>
+
+    <!-- HEADER -->
     <header class="header">Header</header>
     <div class="realtors">Top 3 realtors</div>
 
@@ -375,6 +380,33 @@
         />
       </figure3>
     </section>
-    <footer class="footer">Footer</footer>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Contact us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        &copy; Copyright 2023 by Lenka. Project is from the course of Jonas
+        Schmedtmann.
+      </p>
+    </footer>
   </body>
 </html>
