--- a/index.html
+++ b/index.html
@@ -21,8 +21,42 @@
     </div>
 
     <!-- HEADER -->
-    <header class="header">Header</header>
-    <div class="realtors">Top 3 realtors</div>
+    <header class="header">
+      <img src="img/logo.png" alt="Nexter logo" class="header__logo" />
+      <h3 class="heading-3">Your own home:</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <burron class="btn header__btn">View your own properties</burron>
+      <div class="header__seenon-text">Seen on</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="BBC logo" />
+        <img src="img/logo-forbes.png" alt="Forbes logo" />
+        <img src="img/logo-techcrunch.png" alt="Tech Crunch logo" />
+        <img src="img/logo-bi.png" alt="Business insider logo" />
+      </div>
+    </header>
+
+    <!-- REALTORS SECTION -->
+    <div class="realtors">
+      <h3 class="heading-3">Top 3 realtors</h3>
+      <div class="realtors__list">
+        <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 --light">Erik Feinman</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+        <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 --light">Kim Brown</h4>
+          <p class="realtors__sold">212 houses sold</p>
+        </div>
+
+        <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 --light">Toby Ramsey</h4>
+          <p class="realtors__sold">198 houses sold</p>
+        </div>
+      </div>
+    </div>
 
     <!-- FEATURES SECTION -->
     <section class="features">
